--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express": "4.17.1",
     "form-data": "^4.0.0",
     "helmet": "4.6.0",
+    "jackrabbit": "^4.4.0",
     "joi": "17.5.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^2.0.0",
@@ -63,6 +64,7 @@
     "@types/bcryptjs": "2.4.2",
     "@types/cors": "2.8.12",
     "@types/express": "4.17.13",
+    "@types/jackrabbit": "^4.3.3",
     "@types/jest": "^27.4.1",
     "@types/jsonwebtoken": "8.5.6",
     "@types/lodash.get": "^4.4.7",
