--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "prepare": "./node_modules/.bin/husky install"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.182",
+    "amqplib": "0.10.0",
     "axios": "0.27.2",
     "bcryptjs": "2.4.3",
     "body-parser": "1.19.0",
@@ -32,9 +34,10 @@
     "date-fns": "2.28.0",
     "dotenv": "10.0.0",
     "express": "4.17.1",
+    "firebase": "^9.9.2",
+    "firebase-admin": "^11.0.1",
     "form-data": "^4.0.0",
     "helmet": "4.6.0",
-    "jackrabbit": "^4.4.0",
     "joi": "17.5.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^2.0.0",
