--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
     "test": "jest --detectOpenHandles --forceExit",
     "build:clean": "rimraf dist",
     "build:app": "babel src --out-dir dist/app --extensions '.js,.ts,.tsx' --copy-files --no-copy-ignored --source-maps",
-    "build:database": "babel database --out-dir dist/database --extensions '.js,.ts,.tsx' --copy-files --no-copy-ignored",
     "build:debug": "npm-run-all -s build:clean \"build:app --source-maps\"",
-    "build": "npm-run-all -s build:clean -p build:app build:database",
+    "build": "npm-run-all -s build:clean -p build:app",
     "migrate:make": "babel-node ./node_modules/.bin/knex migrate:make --knexfile ./database/knexfile.ts",
     "migrate:latest": "babel-node ./node_modules/.bin/knex migrate:latest --knexfile ./database/knexfile.ts",
     "migrate:rollback": "babel-node ./node_modules/.bin/knex migrate:rollback --knexfile ./database/knexfile.ts",
@@ -40,7 +39,6 @@
     "helmet": "4.6.0",
     "joi": "17.5.0",
     "jsonwebtoken": "^8.5.1",
-    "knex": "^2.0.0",
     "lodash.get": "^4.4.2",
     "lodash.omit": "4.5.0",
     "lodash.pick": "4.4.0",
@@ -48,7 +46,6 @@
     "morgan": "1.10.0",
     "multer": "1.4.4",
     "nodemailer": "6.7.2",
-    "objection": "2.2.18",
     "pg": "^8.7.3",
     "uuid": "8.3.2",
     "winston": "3.7.2",
