--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "pg": "^8.7.3",
     "uuid": "8.3.2",
     "winston": "3.7.2",
-    "xml2js": "^0.4.23"
+    "xml2js": "^0.4.23",
+    "typescript": "4.6.3"
   },
   "cypress-cucumber-preprocessor": {
     "step_definitions": "cypress/support/steps"
@@ -94,7 +95,6 @@
     "nodemon": "2.0.12",
     "npm-run-all": "4.1.5",
     "rimraf": "3.0.2",
-    "typescript": "4.6.3"
   },
   "packageManager": "yarn@3.1.1"
 }
