--- a/package.json
+++ b/package.json
@@ -94,7 +94,7 @@
     "jest": "^27.5.1",
     "nodemon": "2.0.12",
     "npm-run-all": "4.1.5",
-    "rimraf": "3.0.2",
+    "rimraf": "3.0.2"
   },
   "packageManager": "yarn@3.1.1"
 }
