--- a/package.json
+++ b/package.json
@@ -50,12 +50,7 @@
     "uuid": "8.3.2",
     "winston": "3.7.2",
     "xml2js": "^0.4.23",
-    "typescript": "4.6.3"
-  },
-  "cypress-cucumber-preprocessor": {
-    "step_definitions": "cypress/support/steps"
-  },
-  "devDependencies": {
+    "typescript": "4.6.3",
     "@babel/cli": "7.15.7",
     "@babel/core": "7.15.5",
     "@babel/node": "7.15.4",
@@ -95,6 +90,11 @@
     "nodemon": "2.0.12",
     "npm-run-all": "4.1.5",
     "rimraf": "3.0.2"
+  },
+  "cypress-cucumber-preprocessor": {
+    "step_definitions": "cypress/support/steps"
+  },
+  "devDependencies": {
   },
   "packageManager": "yarn@3.1.1"
 }
