--- a/package.json
+++ b/package.json
@@ -4,21 +4,18 @@
   "license": "ISC",
   "private": true,
   "engines": {
-    "node": ">=14"
+    "node": "16.17.0"
   },
   "scripts": {
-    "start": "node build/index.js",
-    "build": "tsc",
-    "postinstall": "npm run build",
     "lint:typescript": "tsc --noEmit",
     "lint:eslint": "eslint --cache --fix --ext '.js,.ts,.tsx' .",
     "lint": "run-p lint:typescript lint:eslint",
-    "start_old": "nodemon --ext 'js,ts' --exec babel-node --extensions '.js,.ts,.tsx' src/index.ts --insecure-http-parser",
+    "start": "nodemon --ext 'js,ts' --exec babel-node --extensions '.js,.ts,.tsx' src/index.ts --insecure-http-parser",
     "test": "jest --detectOpenHandles --forceExit",
     "build:clean": "rimraf dist",
     "build:app": "babel src --out-dir dist/app --extensions '.js,.ts,.tsx' --copy-files --no-copy-ignored --source-maps",
     "build:debug": "npm-run-all -s build:clean \"build:app --source-maps\"",
-    "build_old": "npm-run-all -s build:clean -p build:app",
+    "build": "npm-run-all -s build:clean -p build:app",
     "migrate:make": "babel-node ./node_modules/.bin/knex migrate:make --knexfile ./database/knexfile.ts",
     "migrate:latest": "babel-node ./node_modules/.bin/knex migrate:latest --knexfile ./database/knexfile.ts",
     "migrate:rollback": "babel-node ./node_modules/.bin/knex migrate:rollback --knexfile ./database/knexfile.ts",
