--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "16.17.0"
   },
   "scripts": {
-    "start": "node dist/index.js",
+    "start": "node dist/app/index.js",
     "build": "tsc",
     "postinstall": "npm run build",
     "lint:typescript": "tsc --noEmit",
